--- a/ListOfDeal/Views/WunderListView.xaml
+++ b/ListOfDeal/Views/WunderListView.xaml
@@ -20,6 +20,6 @@
             <Button Content="Handle change WLTask" Command="{Binding HandleChangedWLTaskCommand}"/>
             <!--<Button Content="change base" Command="{Binding TestCommand}"/>-->
         </StackPanel>
-        <ListBox ItemsSource="{Binding Logs}" Grid.Row="1" Loaded="ListBox_Loaded" x:Name="listBox1" />
+        <ListBox ItemsSource="{Binding Logs}" Grid.Row="1" Loaded="ListBox_Loaded" x:Name="listBox1" FontFamily="Consolas" />
     </Grid>
 </UserControl>
