--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -1,61 +1,64 @@
-﻿<dx:DXWindow xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-        xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core" 
-        x:Class="ListOfDeal.MainWindow"
-        xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-        xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
-        xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-        xmlns:dxc="http://schemas.devexpress.com/winfx/2008/xaml/charts"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:views="clr-namespace:ListOfDeal.Views"     
-        xmlns:local="clr-namespace:ListOfDeal"
-        Title="MainWindow" Height="700" Width="1200"
-        WindowState="Maximized"
-        SnapsToDevicePixels="True"
-        UseLayoutRounding="True"
-        Icon="Resources/done_eM5_1.ico"
+﻿<dx:DXWindow x:Class="ListOfDeal.MainWindow"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dxc="http://schemas.devexpress.com/winfx/2008/xaml/charts"
+             xmlns:views="clr-namespace:ListOfDeal.Views"
+             xmlns:local="clr-namespace:ListOfDeal"
+             Height="700"
+             Width="1200"
+             Icon="Resources/done_eM5_1.ico"
+             SnapsToDevicePixels="True"
+             Title="MainWindow"
+             UseLayoutRounding="True"
+             WindowState="Maximized"
              >
+
     <dx:DXWindow.Resources>
         <Style TargetType="dxe:ComboBoxEdit">
-            <Setter Property="IsTextEditable" Value="False"/>
+            <Setter Property="IsTextEditable" Value="False" />
             <Style.Triggers>
                 <Trigger Property="Name" Value="editor">
-                    <Setter Property="IsTextEditable" Value="True"/>
+                    <Setter Property="IsTextEditable" Value="True" />
                 </Trigger>
             </Style.Triggers>
         </Style>
     </dx:DXWindow.Resources>
+
     <dxmvvm:Interaction.Behaviors>
-        <dxmvvm:EventToCommand EventName="Closing" Command="{Binding SaveChangesCommand}"/>
-        <local:ExportToExcelService ScheduledGrid="{Binding Path=Grid, ElementName=ScheduledActionsView}"
-                                    WaitedGrid="{Binding Path=Grid, ElementName=WaitedActionsView}" 
-                                                       />
+        <dxmvvm:EventToCommand Command="{Binding SaveChangesCommand}" EventName="Closing" />
+        <local:ExportToExcelService ScheduledGrid="{Binding Path=Grid, ElementName=ScheduledActionsView}" WaitedGrid="{Binding Path=Grid, ElementName=WaitedActionsView}" />
     </dxmvvm:Interaction.Behaviors>
+
     <Grid>
         <dx:DXTabControl SelectedIndex="{Binding SelectedTabIndex}">
-
             <dx:DXTabItem Header="Enter new project">
-                <views:EnterNewProjectView/>
+                <views:EnterNewProjectView />
             </dx:DXTabItem>
             <dx:DXTabItem Header="Waited">
-                <views:WaitedActionsView x:Name="WaitedActionsView"/>
+                <views:WaitedActionsView x:Name="WaitedActionsView" />
             </dx:DXTabItem>
             <dx:DXTabItem Header="Scheduled">
-                <views:ScheduledActionsView x:Name="ScheduledActionsView"/>
+                <views:ScheduledActionsView x:Name="ScheduledActionsView" />
             </dx:DXTabItem>
             <dx:DXTabItem Header="Chart">
-                <views:ChartView/>
+                <views:ChartView />
             </dx:DXTabItem>
             <dx:DXTabItem Header="History">
-                <views:HistoryView/>
+                <views:HistoryView />
             </dx:DXTabItem>
             <dx:DXTabItem Header="WunderList">
-                <views:WunderListView DataContext="{Binding WLViewModel}"/>
+                <views:WunderListView DataContext="{Binding WLViewModel}" />
             </dx:DXTabItem>
             <dx:DXTabItem Header="WeekStat">
-                <views:WeeksStatisitc/>
+                <views:WeeksStatisitc />
             </dx:DXTabItem>
         </dx:DXTabControl>
     </Grid>
+
 </dx:DXWindow>
