--- a/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
+++ b/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
@@ -1,26 +1,29 @@
 ﻿<UserControl x:Class="ListOfDeal.Views.ScheduledActionsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
              xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
              xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:local="clr-namespace:ListOfDeal"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <dxg:GridControl Grid.Row="1" ItemsSource="{Binding ScheduledActions}" x:Name="InnerGrid"
-                                  AutoExpandAllGroups="True"
-                                     >
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="300"
+             >
+    <dxg:GridControl x:Name="InnerGrid"
+                     Grid.Row="1"
+                     AutoExpandAllGroups="True"
+                     ItemsSource="{Binding ScheduledActions}"
+                     >
         <dxg:GridControl.Columns>
-            <dxg:GridColumn FieldName="Name" Width="600"/>
-
-            <dxg:GridColumn FieldName="DateCreated" ReadOnly="True"/>
+            <dxg:GridColumn Width="600" FieldName="Name" />
+            <dxg:GridColumn FieldName="DateCreated" ReadOnly="True" />
             <dxg:GridColumn FieldName="ScheduledTime" GroupIndex="0">
                 <dxg:GridColumn.EditSettings>
-                    <dxe:DateEditSettings/>
+                    <dxe:DateEditSettings />
                 </dxg:GridColumn.EditSettings>
             </dxg:GridColumn>
             <dxg:GridColumn FieldName="Comment">
@@ -34,29 +37,33 @@
                     <DataTemplate>
                         <dxe:ComboBoxEdit Name="PART_Editor">
                             <dxmvvm:Interaction.Behaviors>
-                                <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:ActionsStatusEnum}"/>
+                                <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:ActionsStatusEnum}" />
                             </dxmvvm:Interaction.Behaviors>
                         </dxe:ComboBoxEdit>
                     </DataTemplate>
                 </dxg:GridColumn.CellTemplate>
             </dxg:GridColumn>
-            <dxg:GridColumn FieldName="IsMajor"/>
+            <dxg:GridColumn FieldName="IsMajor" />
         </dxg:GridControl.Columns>
         <dxg:GridControl.View>
             <dxg:TableView ShowGroupedColumns="True">
                 <dxg:TableView.FormatConditions>
-                    <dxg:FormatCondition FieldName="Status" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[Status] = 'Completed'">
-                        <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
+                    <dxg:FormatCondition ApplyToRow="True"
+                                         Expression="[Status] = 'Completed'"
+                                         FieldName="Status"
+                                         Value1="{x:Null}"
+                                         ValueRule="Expression"
+                                         >
+                        <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}" />
                     </dxg:FormatCondition>
                 </dxg:TableView.FormatConditions>
                 <dxg:TableView.RowCellMenuCustomizations>
-                    <dxb:BarButtonItem Content="Go to project"
-                                                       Command="{Binding View.DataContext.GoToParentProjectCommand}"
-                                                       CommandParameter="{Binding Path=View.Grid.CurrentItem}"
-                                                       >
-                    </dxb:BarButtonItem>
+                    <dxb:BarButtonItem Command="{Binding View.DataContext.GoToParentProjectCommand}"
+                                       CommandParameter="{Binding Path=View.Grid.CurrentItem}"
+                                       Content="Go to project" />
                 </dxg:TableView.RowCellMenuCustomizations>
             </dxg:TableView>
         </dxg:GridControl.View>
     </dxg:GridControl>
+
 </UserControl>
