--- a/ListOfDeal/Views/Actions/WaitedActionsView.xaml
+++ b/ListOfDeal/Views/Actions/WaitedActionsView.xaml
@@ -1,31 +1,37 @@
 ﻿<UserControl x:Class="ListOfDeal.Views.WaitedActionsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
              xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
              xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ListOfDeal"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="300"
+             >
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="23"/>
-            <RowDefinition Height="23"/>
-            <RowDefinition/>
+            <RowDefinition Height="23" />
+            <RowDefinition Height="23" />
+            <RowDefinition />
         </Grid.RowDefinitions>
-        <Button Content="Get Data" Command="{Binding ProvideActionsCommand}"/>
-        <Button Content="Export" Command="{Binding ExportGridsCommand}" Grid.Row="1"/>
-        <dxg:GridControl Grid.Row="2" x:Name="InnerGrid" x:FieldModifier="public"
-                                     ItemsSource="{Binding WaitedActions}" AutoExpandAllGroups="True"
-                                     >
+        <Button Command="{Binding ProvideActionsCommand}" Content="Get Data" />
+        <Button Grid.Row="1"
+                Command="{Binding ExportGridsCommand}"
+                Content="Export" />
+        <dxg:GridControl x:Name="InnerGrid"
+                         Grid.Row="2"
+                         AutoExpandAllGroups="True"
+                         ItemsSource="{Binding WaitedActions}"
+                         x:FieldModifier="public"
+                         >
             <dxg:GridControl.Columns>
-                <dxg:GridColumn FieldName="Name" Width="550"/>
-            
-                <dxg:GridColumn FieldName="DateCreated" ReadOnly="True"/>
+                <dxg:GridColumn Width="550" FieldName="Name" />
+                <dxg:GridColumn FieldName="DateCreated" ReadOnly="True" />
                 <dxg:GridColumn FieldName="Comment">
                     <dxg:GridColumn.EditSettings>
                         <dxe:MemoEditSettings />
@@ -34,7 +40,9 @@
                 <dxg:GridColumn FieldName="ProjectName" />
                 <dxg:GridColumn FieldName="ProjectType" GroupIndex="1">
                     <dxg:GridColumn.EditSettings>
-                        <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectTypes}" ValueMember="Id" DisplayMember="Name"/>
+                        <dxe:ComboBoxEditSettings DisplayMember="Name"
+                                                  ItemsSource="{Binding ProjectTypes}"
+                                                  ValueMember="Id" />
                     </dxg:GridColumn.EditSettings>
                 </dxg:GridColumn>
                 <dxg:GridColumn FieldName="Status">
@@ -42,7 +50,7 @@
                         <DataTemplate>
                             <dxe:ComboBoxEdit Name="PART_Editor">
                                 <dxmvvm:Interaction.Behaviors>
-                                    <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:ActionsStatusEnum}"/>
+                                    <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:ActionsStatusEnum}" />
                                 </dxmvvm:Interaction.Behaviors>
                             </dxe:ComboBoxEdit>
                         </DataTemplate>
@@ -52,19 +60,23 @@
             <dxg:GridControl.View>
                 <dxg:TableView>
                     <dxg:TableView.FormatConditions>
-                        <dxg:FormatCondition FieldName="Status" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[Status] = 'Completed'">
-                            <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
+                        <dxg:FormatCondition ApplyToRow="True"
+                                             Expression="[Status] = 'Completed'"
+                                             FieldName="Status"
+                                             Value1="{x:Null}"
+                                             ValueRule="Expression"
+                                             >
+                            <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}" />
                         </dxg:FormatCondition>
                     </dxg:TableView.FormatConditions>
                     <dxg:TableView.RowCellMenuCustomizations>
-                        <dxb:BarButtonItem Content="Go to project"
-                                                       Command="{Binding View.DataContext.GoToParentProjectCommand}"
-                                                       CommandParameter="{Binding Path=View.Grid.CurrentItem}"
-                                                       >
-                        </dxb:BarButtonItem>
+                        <dxb:BarButtonItem Command="{Binding View.DataContext.GoToParentProjectCommand}"
+                                           CommandParameter="{Binding Path=View.Grid.CurrentItem}"
+                                           Content="Go to project" />
                     </dxg:TableView.RowCellMenuCustomizations>
                 </dxg:TableView>
             </dxg:GridControl.View>
         </dxg:GridControl>
     </Grid>
+
 </UserControl>
