--- a/ListOfDeal/Views/ChartView.xaml
+++ b/ListOfDeal/Views/ChartView.xaml
@@ -2,71 +2,71 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:dxc="http://schemas.devexpress.com/winfx/2008/xaml/charts"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="300"
+             >
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="9*"/>
+            <RowDefinition />
+            <RowDefinition Height="9*" />
         </Grid.RowDefinitions>
-        <Button Content="Get data chart" Command="{Binding GetChartDataCommand}"/>
-        <dxc:ChartControl Grid.Row="1" >
+        <Button Command="{Binding GetChartDataCommand}" Content="Get data chart" />
+        <dxc:ChartControl Grid.Row="1">
             <dxc:XYDiagram2D>
                 <dxc:XYDiagram2D.AxisY>
                     <dxc:AxisY2D>
                         <dxc:AxisY2D.WholeRange>
-                            <dxc:Range MinValue="{Binding ChartMinValue}"/>
+                            <dxc:Range MinValue="{Binding ChartMinValue}" />
                         </dxc:AxisY2D.WholeRange>
                     </dxc:AxisY2D>
                 </dxc:XYDiagram2D.AxisY>
                 <dxc:XYDiagram2D.SecondaryAxesY>
-                    <dxc:SecondaryAxisY2D Name="secondaryAxisY"  />
+                    <dxc:SecondaryAxisY2D Name="secondaryAxisY" />
                 </dxc:XYDiagram2D.SecondaryAxesY>
-                <dxc:LineSeries2D  ValueDataMember="Summary"
-                                       ArgumentDataMember="TDate"
-                                       DisplayName="Sum"
-                                       DataSource="{Binding AllDayData}"
-                                               LabelsVisibility="False"
-                                       >
+                <dxc:LineSeries2D ArgumentDataMember="TDate"
+                                  DataSource="{Binding AllDayData}"
+                                  DisplayName="Sum"
+                                  LabelsVisibility="False"
+                                  ValueDataMember="Summary"
+                                  >
                     <dxc:LineSeries2D.Label>
-                        <dxc:SeriesLabel ResolveOverlappingMode="Default"
-                                                     TextPattern="{}{V:F2}"/>
+                        <dxc:SeriesLabel ResolveOverlappingMode="Default" TextPattern="{}{V:F2}" />
                     </dxc:LineSeries2D.Label>
                 </dxc:LineSeries2D>
-                <dxc:BarSideBySideSeries2D Name="series1"
-                                                            dxc:XYDiagram2D.SeriesAxisY="{Binding ElementName=secondaryAxisY}" 
-                                                          ValueDataMember="CountIn"
-                                       ArgumentDataMember="TDate"
-                                       DisplayName="In"
-                                       DataSource="{Binding AllDayData}"
-                                                        LabelsVisibility="False"    
-                                                       >
+                <dxc:BarSideBySideSeries2D ArgumentDataMember="TDate"
+                                           DataSource="{Binding AllDayData}"
+                                           DisplayName="In"
+                                           dxc:XYDiagram2D.SeriesAxisY="{Binding ElementName=secondaryAxisY}"
+                                           LabelsVisibility="False"
+                                           Name="series1"
+                                           ValueDataMember="CountIn"
+                                           >
                     <dxc:BarSideBySideSeries2D.Label>
-                        <dxc:SeriesLabel ResolveOverlappingMode="Default"
-                                                     TextPattern="{}{V:F2}"/>
+                        <dxc:SeriesLabel ResolveOverlappingMode="Default" TextPattern="{}{V:F2}" />
                     </dxc:BarSideBySideSeries2D.Label>
-                    
                 </dxc:BarSideBySideSeries2D>
-                <dxc:BarSideBySideSeries2D Name="series2"
-                                                            dxc:XYDiagram2D.SeriesAxisY="{Binding ElementName=secondaryAxisY}" 
-                                                          ValueDataMember="CountOut"
-                                       ArgumentDataMember="TDate"
-                                       DisplayName="Out"
-                                       DataSource="{Binding AllDayData}"
-                                                       LabelsVisibility="False"
-                                                       >
+                <dxc:BarSideBySideSeries2D ArgumentDataMember="TDate"
+                                           DataSource="{Binding AllDayData}"
+                                           DisplayName="Out"
+                                           dxc:XYDiagram2D.SeriesAxisY="{Binding ElementName=secondaryAxisY}"
+                                           LabelsVisibility="False"
+                                           Name="series2"
+                                           ValueDataMember="CountOut"
+                                           >
                     <dxc:BarSideBySideSeries2D.Label>
                         <dxc:SeriesLabel ResolveOverlappingMode="Default"
-                                                     Visibility="Visible"
-                                                     TextPattern="{}{V:F2}"/>
+                                         TextPattern="{}{V:F2}"
+                                         Visibility="Visible" />
                     </dxc:BarSideBySideSeries2D.Label>
                 </dxc:BarSideBySideSeries2D>
             </dxc:XYDiagram2D>
             <dxc:ChartControl.Legend>
-                <dxc:Legend/>
+                <dxc:Legend />
             </dxc:ChartControl.Legend>
         </dxc:ChartControl>
     </Grid>
+
 </UserControl>
