--- a/ListOfDeal/Views/PopupWindows/CreateNewInfo.xaml
+++ b/ListOfDeal/Views/PopupWindows/CreateNewInfo.xaml
@@ -1,17 +1,17 @@
-﻿<dx:DXWindow
-    x:Class="ListOfDeal.CreateNewInfoWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-    Title="CreateNewInfo" Height="110" Width="350"
-    >
-
-    <dxlc:LayoutGroup Orientation="Vertical" VerticalAlignment="Center">
+﻿<dx:DXWindow x:Class="ListOfDeal.CreateNewInfoWindow"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             Height="110"
+             Width="350"
+             Title="CreateNewInfo"
+             >
+    <dxlc:LayoutGroup VerticalAlignment="Center" Orientation="Vertical">
         <dxlc:LayoutItem Label="Name">
-            <dxe:TextEdit EditValue="{Binding Name,Mode=TwoWay}"/>
+            <dxe:TextEdit EditValue="{Binding Name,Mode=TwoWay}" />
         </dxlc:LayoutItem>
-        <Button Content="Ok" Click="Button_Click"/>
+        <Button Click="Button_Click" Content="Ok" />
     </dxlc:LayoutGroup>
 </dx:DXWindow>
