--- a/ListOfDeal/Views/PopupWindows/EditProject.xaml
+++ b/ListOfDeal/Views/PopupWindows/EditProject.xaml
@@ -1,48 +1,50 @@
-﻿<dx:DXWindow
-    x:Class="ListOfDeal.EditProject"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:local="clr-namespace:ListOfDeal"
-    Title="EditProject" Height="350" Width="1200"
-    >
+﻿<dx:DXWindow x:Class="ListOfDeal.EditProject"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:local="clr-namespace:ListOfDeal"
+             Height="350"
+             Width="1200"
+             Title="EditProject"
+             >
 
     <Grid>
         <dxg:GridControl x:Name="grd1" CurrentColumnChanged="GridControl_CurrentColumnChanged">
             <dxg:GridControl.Columns>
-                <dxg:GridColumn FieldName="Name"/>
-              
+                <dxg:GridColumn FieldName="Name" />
                 <dxg:GridColumn FieldName="Status">
                     <dxg:GridColumn.CellTemplate>
                         <DataTemplate>
                             <dxe:ComboBoxEdit Name="PART_Editor">
                                 <dxmvvm:Interaction.Behaviors>
-                                    <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:ActionsStatusEnum}"/>
+                                    <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:ActionsStatusEnum}" />
                                 </dxmvvm:Interaction.Behaviors>
                             </dxe:ComboBoxEdit>
                         </DataTemplate>
                     </dxg:GridColumn.CellTemplate>
                 </dxg:GridColumn>
-                <dxg:GridColumn FieldName="DateCreated" ReadOnly="True"/>
+                <dxg:GridColumn FieldName="DateCreated" ReadOnly="True" />
                 <dxg:GridColumn FieldName="ScheduledTime">
                     <dxg:GridColumn.EditSettings>
-                        <dxe:DateEditSettings/>
+                        <dxe:DateEditSettings />
                     </dxg:GridColumn.EditSettings>
                 </dxg:GridColumn>
-              
-                <dxg:GridColumn FieldName="IsActive"/>
-                <dxg:GridColumn FieldName="Comment"/>
-                <dxg:GridColumn FieldName="OrderNumber"/>
+                <dxg:GridColumn FieldName="IsActive" />
+                <dxg:GridColumn FieldName="Comment" />
+                <dxg:GridColumn FieldName="OrderNumber" />
             </dxg:GridControl.Columns>
             <dxg:GridControl.View>
-                <dxg:TableView EditorShowMode="MouseUpFocused"/>
+                <dxg:TableView EditorShowMode="MouseUpFocused" />
             </dxg:GridControl.View>
             <dxmvvm:Interaction.Behaviors>
-                <dxg:GridDragDropManager AllowDrag="True" AllowDrop="True" Drop="GridDragDropManager_Drop" />
+                <dxg:GridDragDropManager AllowDrag="True"
+                                         AllowDrop="True"
+                                         Drop="GridDragDropManager_Drop" />
             </dxmvvm:Interaction.Behaviors>
         </dxg:GridControl>
     </Grid>
+
 </dx:DXWindow>
