--- a/ListOfDeal/Views/WeeksStatistic.xaml
+++ b/ListOfDeal/Views/WeeksStatistic.xaml
@@ -1,77 +1,86 @@
 ﻿<UserControl x:Class="ListOfDeal.Views.WeeksStatisitc"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:ListOfDeal.Views"
              xmlns:vm="clr-namespace:ListOfDeal.Classes"
              xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
              xmlns:dxc="http://schemas.devexpress.com/winfx/2008/xaml/charts"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="300"
+             >
+
     <UserControl.DataContext>
-        <vm:WeekStatisticViewModel/>
+        <vm:WeekStatisticViewModel />
     </UserControl.DataContext>
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <StackPanel>
-            <Button Content="Create items" Command="{Binding CreateItemsCommand}"/>
-            <Button Content="Get items" Command="{Binding GetItemsCommand}"/>
-            <Button Content="Mark items complete" Command="{Binding MarkItemsCompleteCommand}"/>
+            <Button Command="{Binding CreateItemsCommand}" Content="Create items" />
+            <Button Command="{Binding GetItemsCommand}" Content="Get items" />
+            <Button Command="{Binding MarkItemsCompleteCommand}" Content="Mark items complete" />
         </StackPanel>
-        <dxg:GridControl Grid.Row="1" ItemsSource="{Binding WeekRecords}" AutoGenerateColumns="None" >
+        <dxg:GridControl Grid.Row="1"
+                         AutoGenerateColumns="None"
+                         ItemsSource="{Binding WeekRecords}"
+                         >
             <dxg:GridControl.Columns>
-                <dxg:GridColumn FieldName="Action.Name" Width="200"/>
-                <dxg:GridColumn FieldName="WeekId" GroupIndex="0"/>
-                <dxg:GridColumn FieldName="IsCompletedInWeek"/>
+                <dxg:GridColumn Width="200" FieldName="Action.Name" />
+                <dxg:GridColumn FieldName="WeekId" GroupIndex="0" />
+                <dxg:GridColumn FieldName="IsCompletedInWeek" />
             </dxg:GridControl.Columns>
             <dxg:GridControl.GroupSummary>
-                <dxg:GridSummaryItem FieldName="IsCompletedInWeek" SummaryType="Sum" ShowInColumn="IsCompletedInWeek" />
-                <dxg:GridSummaryItem FieldName="IsCompletedInWeek" SummaryType="Count"/>
+                <dxg:GridSummaryItem FieldName="IsCompletedInWeek"
+                                     ShowInColumn="IsCompletedInWeek"
+                                     SummaryType="Sum" />
+                <dxg:GridSummaryItem FieldName="IsCompletedInWeek" SummaryType="Count" />
             </dxg:GridControl.GroupSummary>
             <dxg:GridControl.View>
-                <dxg:TableView GroupSummaryDisplayMode="AlignByColumns"/>
+                <dxg:TableView GroupSummaryDisplayMode="AlignByColumns" />
             </dxg:GridControl.View>
         </dxg:GridControl>
-        <dxc:ChartControl Grid.Row="2" >
+        <dxc:ChartControl Grid.Row="2">
             <dxc:XYDiagram2D>
                 <dxc:XYDiagram2D.SecondaryAxesY>
-                    <dxc:SecondaryAxisY2D Name="secondaryAxisY"  />
+                    <dxc:SecondaryAxisY2D Name="secondaryAxisY" />
                 </dxc:XYDiagram2D.SecondaryAxesY>
-                <dxc:BarSideBySideSeries2D Name="series1"
-                                                            dxc:XYDiagram2D.SeriesAxisY="{Binding ElementName=secondaryAxisY}" 
-                                                          ValueDataMember="PercentComplete"
-                                       ArgumentDataMember="Id"
-                                       DisplayName="PercentComplete"
-                                       DataSource="{Binding WeekDataList}"
-                                                        LabelsVisibility="False" 
+                <dxc:BarSideBySideSeries2D ArgumentDataMember="Id"
                                            CrosshairLabelPattern="{}{V:p0}"
-                                                       >
+                                           DataSource="{Binding WeekDataList}"
+                                           DisplayName="PercentComplete"
+                                           dxc:XYDiagram2D.SeriesAxisY="{Binding ElementName=secondaryAxisY}"
+                                           LabelsVisibility="False"
+                                           Name="series1"
+                                           ValueDataMember="PercentComplete"
+                                           >
                     <!--<dxc:BarSideBySideSeries2D.Label>
                         <dxc:SeriesLabel ResolveOverlappingMode="Default" 
                                                      TextPattern = "{}{V:p2}" />
                     </dxc:BarSideBySideSeries2D.Label>-->
                 </dxc:BarSideBySideSeries2D>
-                <dxc:LineSeries2D  ValueDataMember="AllInActions"
-                                       ArgumentDataMember="Id"
-                                       DisplayName="AllInActions"
-                                       DataSource="{Binding WeekDataList}"
-                                               LabelsVisibility="False"
-                                       >
+                <dxc:LineSeries2D ArgumentDataMember="Id"
+                                  DataSource="{Binding WeekDataList}"
+                                  DisplayName="AllInActions"
+                                  LabelsVisibility="False"
+                                  ValueDataMember="AllInActions"
+                                  >
                     <!--<dxc:LineSeries2D.Label>
                         <dxc:SeriesLabel ResolveOverlappingMode="Default"
                                                      TextPattern="{}{V:F2}"/>
                     </dxc:LineSeries2D.Label>-->
                 </dxc:LineSeries2D>
-             
             </dxc:XYDiagram2D>
             <dxc:ChartControl.Legend>
-                <dxc:Legend/>
+                <dxc:Legend />
             </dxc:ChartControl.Legend>
         </dxc:ChartControl>
     </Grid>
+
 </UserControl>
