--- a/ListOfDeal/Views/WunderListView.xaml
+++ b/ListOfDeal/Views/WunderListView.xaml
@@ -1,25 +1,33 @@
 ﻿<UserControl x:Class="ListOfDeal.Views.WunderListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:ListOfDeal.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="1300" d:DesignWidth="300">
+             mc:Ignorable="d"
+             d:DesignHeight="1300"
+             d:DesignWidth="300"
+             >
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="3*"/>
+            <RowDefinition />
+            <RowDefinition Height="3*" />
         </Grid.RowDefinitions>
-        <StackPanel >
-            <Button Content="Create processor" Command="{Binding CreateProcessorCommand}"/>
-            <Button Content="Create tasks" Command="{Binding CreateTasksCommand}"/>
-            <Button Content="Handle completed WLTasks" Command="{Binding HandleCompletedWlTasksCommand}"/>
-            <Button Content="Handle completed Actions" Command="{Binding HandleCompletedActionsCommand}"/>
-            <Button Content="Handle changed WLTasks" Command="{Binding HandleChangedWLTaskCommand}"/>
-            <Button Content="Handle changed LODActions" Command="{Binding HandleChangedActionsCommand}"/>
+        <StackPanel>
+            <Button Command="{Binding CreateProcessorCommand}" Content="Create processor" />
+            <Button Command="{Binding CreateTasksCommand}" Content="Create tasks" />
+            <Button Command="{Binding HandleCompletedWlTasksCommand}" Content="Handle completed WLTasks" />
+            <Button Command="{Binding HandleCompletedActionsCommand}" Content="Handle completed Actions" />
+            <Button Command="{Binding HandleChangedWLTaskCommand}" Content="Handle changed WLTasks" />
+            <Button Command="{Binding HandleChangedActionsCommand}" Content="Handle changed LODActions" />
             <!--<Button Content="change base" Command="{Binding TestCommand}"/>-->
         </StackPanel>
-        <ListBox ItemsSource="{Binding Logs}" Grid.Row="1" Loaded="ListBox_Loaded" x:Name="listBox1" FontFamily="Consolas" />
+        <ListBox x:Name="listBox1"
+                 Grid.Row="1"
+                 FontFamily="Consolas"
+                 ItemsSource="{Binding Logs}"
+                 Loaded="ListBox_Loaded" />
     </Grid>
+
 </UserControl>
