--- a/ListOfDeal/Views/WunderListView.xaml
+++ b/ListOfDeal/Views/WunderListView.xaml
@@ -21,6 +21,7 @@
             <Button Command="{Binding HandleCompletedActionsCommand}" Content="Handle completed Actions" />
             <Button Command="{Binding HandleChangedWLTaskCommand}" Content="Handle changed WLTasks" />
             <Button Command="{Binding HandleChangedActionsCommand}" Content="Handle changed LODActions" />
+            <Button Command="{Binding GetDiaryEntriesCommand}" Content="Get Diary"/>
             <!--<Button Content="change base" Command="{Binding TestCommand}"/>-->
         </StackPanel>
         <ListBox x:Name="listBox1"
