fix binding errors

--- a/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
+++ b/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
@@ -32,7 +32,7 @@
                 </dxg:GridColumn.EditSettings>
             </dxg:GridColumn>
             <dxg:GridColumn FieldName="ProjectName" />
-            <dxg:GridColumn FieldName="Status">
+            <dxg:GridColumn FieldName="Status2">
                 <dxg:GridColumn.CellTemplate>
                     <DataTemplate>
                         <dxe:ComboBoxEdit Name="PART_Editor">
