--- a/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
+++ b/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
@@ -20,7 +20,7 @@
                      >
         <dxg:GridControl.Columns>
             <dxg:GridColumn Width="600" FieldName="Name" />
-            <dxg:GridColumn FieldName="DateCreated" ReadOnly="True" />
+            <dxg:GridColumn FieldName="DateCreated" AllowEditing="False"/>
             <dxg:GridColumn FieldName="ScheduledTime" GroupIndex="0">
                 <dxg:GridColumn.EditSettings>
                     <dxe:DateEditSettings />
@@ -49,7 +49,7 @@
             <dxg:TableView ShowGroupedColumns="True">
                 <dxg:TableView.FormatConditions>
                     <dxg:FormatCondition ApplyToRow="True"
-                                         Expression="[Status] = 'Completed'"
+                                         Expression="[Status2] = 'Completed'"
                                          FieldName="Status"
                                          Value1="{x:Null}"
                                          ValueRule="Expression"
