--- a/ListOfDeal/Views/WunderListView.xaml
+++ b/ListOfDeal/Views/WunderListView.xaml
@@ -22,6 +22,7 @@
             <Button Command="{Binding HandleChangedWLTaskCommand}" Content="Handle changed WLTasks" />
             <Button Command="{Binding HandleChangedActionsCommand}" Content="Handle changed LODActions" />
             <Button Command="{Binding GetDiaryEntriesCommand}" Content="Get Diary"/>
+            <Button Command="{Binding BackupCommand}" Content="Backup"/>
             <Button Content="Test button" Command="{Binding TestCommand}"/>
         </StackPanel>
         <ListBox x:Name="listBox1"
