--- a/ListOfDeal/Views/EnterNewProjectView.xaml
+++ b/ListOfDeal/Views/EnterNewProjectView.xaml
@@ -252,10 +252,10 @@
                                         <dxg:FormatCondition Expression="[Status] = 'InWork' and [ScheduledTime]!=null and [ScheduledTime] &lt; LocalDateTimeToday()" FieldName="ScheduledTime">
                                             <dx:Format Background="OrangeRed" />
                                         </dxg:FormatCondition>
-                                        <dxg:FormatCondition Expression="[IsMajor] = 'True'" FieldName="IsMajor">
+                                        <dxg:FormatCondition Expression="[IsMajor] = 'True' and ([Status]='Delay' or [Status]='InWork')" FieldName="IsMajor">
                                             <dx:Format Background="#FFFF00EE" />
                                         </dxg:FormatCondition>
-                                        <dxg:FormatCondition Expression="[ToBuy] = 'True'" FieldName="ToBuy">
+                                        <dxg:FormatCondition Expression="[ToBuy] = 'True' and ([Status]='Delay' or [Status]='InWork')" FieldName="ToBuy">
                                             <dx:Format Background="#FF00E3B6" />
                                         </dxg:FormatCondition>
                                     </dxg:TableView.FormatConditions>
